# virtual-surround

./: .gitmodules  Cargo.toml  README.md
jack-vsf/: Cargo.toml
jack-vsf/src/: main.rs
resources/hrir_kemar/: LICENSE
resources/hrir_listen/: LICENSE
resources/hrir_listen/info/: IRC_1002.xml  IRC_1003.xml  IRC_1004.xml  IRC_1005.xml  IRC_1006.xml  IRC_1007.xml  IRC_1008.xml  IRC_1009.xml  IRC_1012.xml  IRC_1013.xml  IRC_1014.xml  IRC_1015.xml  IRC_1016.xml  IRC_1017.xml  IRC_1018.xml  IRC_1020.xml  IRC_1021.xml  IRC_1022.xml  IRC_1023.xml  IRC_1025.xml  IRC_1026.xml  IRC_1028.xml  IRC_1029.xml  IRC_1030.xml  IRC_1031.xml  IRC_1032.xml  IRC_1033.xml  IRC_1034.xml  IRC_1037.xml  IRC_1038.xml  IRC_1039.xml  IRC_1040.xml  IRC_1041.xml  IRC_1042.xml  IRC_1043.xml  IRC_1044.xml  IRC_1045.xml  IRC_1046.xml  IRC_1047.xml  IRC_1048.xml  (+11 more)
virtual-surround/: Cargo.toml
virtual-surround/examples/: wav-virtualizer.rs
virtual-surround/src/: lib.rs  rustfft.rs
